--- a/category.html
+++ b/category.html
@@ -15,7 +15,7 @@
     <h2>Navigation</h2>
     <ul>
         <li><a href="index.html">-------------</a></li>
-        <li><a href="category.html?type=personnel">Office Personnel</a></li>
+        <li><a href="category.html?type=personnel">Personnel</a></li>
         <li><a href="category.html?type=scp">SCP Files</a></li>
         <li><a href="category.html?type=people">People of Interest</a></li>
         <li><a href="category.html?type=groups">Groups of Interest</a></li>
