--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SCiPnet - Office of The Administrator Mainframe</title>
+<title>SCiPnet | RAISA Mainframe</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/sidebar.css">
 </head>
@@ -16,7 +16,7 @@
     <h2>Navigation</h2>
     <ul>
         <li><a href="index.html">-------------</a></li>
-        <li><a href="category.html?type=personnel">Office Personnel</a></li>
+        <li><a href="category.html?type=personnel">Personnel</a></li>
         <li><a href="category.html?type=scp">SCP Files</a></li>
         <li><a href="category.html?type=people">People of Interest</a></li>
         <li><a href="category.html?type=groups">Groups of Interest</a></li>
