--- a/entries/personnel/demian_manchegan.html
+++ b/entries/personnel/demian_manchegan.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Entry Page</title>
+<title>RAISA | Demian Manchegan</title>
 
 <!-- IMPORTANT: paths go two levels up -->
 <link rel="stylesheet" href="../../css/style.css">
